--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,33 @@ set(SOURCE_2015
   ${SOURCE_DIR}2015/Day24.cpp
   ${SOURCE_DIR}2015/Day25.cpp
 )
+set(SOURCE_2016
+  ${SOURCE_DIR}2016/Day01.cpp
+  ${SOURCE_DIR}2016/Day02.cpp
+  ${SOURCE_DIR}2016/Day03.cpp
+  ${SOURCE_DIR}2016/Day04.cpp
+  ${SOURCE_DIR}2016/Day05.cpp
+  ${SOURCE_DIR}2016/Day06.cpp
+  ${SOURCE_DIR}2016/Day07.cpp
+  ${SOURCE_DIR}2016/Day08.cpp
+  ${SOURCE_DIR}2016/Day09.cpp
+  ${SOURCE_DIR}2016/Day10.cpp
+  ${SOURCE_DIR}2016/Day11.cpp
+  ${SOURCE_DIR}2016/Day12.cpp
+  ${SOURCE_DIR}2016/Day13.cpp
+  ${SOURCE_DIR}2016/Day14.cpp
+  ${SOURCE_DIR}2016/Day15.cpp
+  ${SOURCE_DIR}2016/Day16.cpp
+  ${SOURCE_DIR}2016/Day17.cpp
+  ${SOURCE_DIR}2016/Day18.cpp
+  ${SOURCE_DIR}2016/Day19.cpp
+  ${SOURCE_DIR}2016/Day20.cpp
+  ${SOURCE_DIR}2016/Day21.cpp
+  ${SOURCE_DIR}2016/Day22.cpp
+  ${SOURCE_DIR}2016/Day23.cpp
+  ${SOURCE_DIR}2016/Day24.cpp
+  ${SOURCE_DIR}2016/Day25.cpp
+)
 
 # Set headers
 set(HEADER "${INCLUDE_DIR}AoCYears.hpp")
@@ -69,6 +96,34 @@ set(HEADER_2015
   ${INCLUDE_DIR}2015/Day24.hpp
   ${INCLUDE_DIR}2015/Day25.hpp
 )
+set(HEADER_2016
+  ${INCLUDE_DIR}2016/AoCYear2016.hpp
+  ${INCLUDE_DIR}2016/Day01.hpp
+  ${INCLUDE_DIR}2016/Day02.hpp
+  ${INCLUDE_DIR}2016/Day03.hpp
+  ${INCLUDE_DIR}2016/Day04.hpp
+  ${INCLUDE_DIR}2016/Day05.hpp
+  ${INCLUDE_DIR}2016/Day06.hpp
+  ${INCLUDE_DIR}2016/Day07.hpp
+  ${INCLUDE_DIR}2016/Day08.hpp
+  ${INCLUDE_DIR}2016/Day09.hpp
+  ${INCLUDE_DIR}2016/Day10.hpp
+  ${INCLUDE_DIR}2016/Day11.hpp
+  ${INCLUDE_DIR}2016/Day12.hpp
+  ${INCLUDE_DIR}2016/Day13.hpp
+  ${INCLUDE_DIR}2016/Day14.hpp
+  ${INCLUDE_DIR}2016/Day15.hpp
+  ${INCLUDE_DIR}2016/Day16.hpp
+  ${INCLUDE_DIR}2016/Day17.hpp
+  ${INCLUDE_DIR}2016/Day18.hpp
+  ${INCLUDE_DIR}2016/Day19.hpp
+  ${INCLUDE_DIR}2016/Day20.hpp
+  ${INCLUDE_DIR}2016/Day21.hpp
+  ${INCLUDE_DIR}2016/Day22.hpp
+  ${INCLUDE_DIR}2016/Day23.hpp
+  ${INCLUDE_DIR}2016/Day24.hpp
+  ${INCLUDE_DIR}2016/Day25.hpp
+)
 
 # Set libraries
 add_subdirectory("${LIBRARY_DIR}coll-aoc-runner")
@@ -80,6 +135,7 @@ project(${PROJECT_NAME})
 add_executable(${EXECUTABLE_NAME} ${SOURCE} ${HEADER}
   ${SOURCE_2015} ${HEADER_2015}
   ${SOURCE_2015} ${HEADER_2015}
+  ${SOURCE_2016} ${HEADER_2016}
 )
 
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${INCLUDE_DIR})
