--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(PROJECT_NAME "COLL-AdventOfCode")
 set(EXECUTABLE_NAME "coll-aoc")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
 
 set(SOURCE_DIR "src/")
 set(INCLUDE_DIR "include/")
