Add Direction to library

--- a/lib/coll-aoc-runner/CMakeLists.txt
+++ b/lib/coll-aoc-runner/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCE
   "${SOURCE_DIR}/AoCIO.cpp"
   "${SOURCE_DIR}/AoCCookie.cpp"
   "${SOURCE_DIR}/strings/Format.cpp"
+  "${SOURCE_DIR}/structs/Direction.cpp"
   "${SOURCE_DIR}/cache/AoCCache.cpp"
   "${SOURCE_DIR}/cache/AoCLocalCache.cpp"
 )
@@ -35,6 +36,7 @@ set(HEADER
   "${INCLUDE_DIR}/${LIBRARY_NAME}/AoCCookie.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/strings/Format.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/structs/Grid.hpp"
+  "${INCLUDE_DIR}/${LIBRARY_NAME}/structs/Direction.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/crypto/MD5.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/cache/AoCCache.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/cache/AoCLocalCache.hpp"
