Add a ThreadPool utility to the library

--- a/lib/coll-aoc-runner/CMakeLists.txt
+++ b/lib/coll-aoc-runner/CMakeLists.txt
@@ -38,6 +38,7 @@ set(HEADER
   "${INCLUDE_DIR}/${LIBRARY_NAME}/structs/Grid.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/structs/Direction.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/crypto/MD5.hpp"
+  "${INCLUDE_DIR}/${LIBRARY_NAME}/parallelism/ThreadPool.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/cache/AoCCache.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/cache/AoCLocalCache.hpp"
   "${INCLUDE_DIR}/${LIBRARY_NAME}/math/Math.hpp"
